force-app/main/default/objects/Product__c/fields/Max_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Loan_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Max Loan Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>