force-app/main/default/objects/Product__c/fields/Min_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Credit_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Min Credit Score</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>