force-app/main/default/objects/Product__c/fields/Min_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Loan_Amount__c</fullName>
    <label>Min Loan Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>