force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Base_Rate__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Min_Credit_Score__c</columns>
    <columns>Interest_Rate_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>